--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
         <nav>
             <nav>
                 <ul class="main-menu">
-                    <li><a href="">Paris</a></li>
-                    <li><a href="">Tokyo</a></li>
-                    <li><a href="">New York</a></li>
+                    <li><a href="">ACCUEIL</a></li>
+                    <li><a href="">ACTUALITES</a></li>
+                    <li><a href="">CONTACT</a></li>
+                    <li><a href="">ACHETER</a></li>
                 </ul>
             </nav>
-            <div class="banner">
-                <div>
-                    <img src="" alt="">
+            <div>
+                <div class="banner">
+                    <div>
+                        <img class="logo" src="assets/img/Resident_Evil_4_Logo_Light_Outlined.png" alt="Logo">
+                    </div>
+                    <h1>REDECOUVREZ UN CLASSIQUE</h1>
                 </div>
-                <div class="logo"> </div>
+
             </div>
         </nav>
     </header>
@@ -32,6 +36,36 @@
             <h2>Survivez. Combattez. Découvrez.</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur ab quae doloremque eum perspiciatis! Perspiciatis id libero praesentium commodi pariatur laudantium, ipsum ab neque quae obcaecati facilis ratione harum necessitatibus.</p>
             <a href="" class="btn savoirplus">En Savoir +</a>
+        </section>
+
+        <section>
+            <h2>ACTUALITES</h2>
+            <div>
+                <div class="news-img">
+                </div>
+                <div class="news-txt">
+                    <p><strong>Nouveaux monstres</strong></p>
+                    <p>Découvrez les nouvelles créatures effrayantes et les améliortions graphiques apportées aux ennemis clasiques de Résident Evil 4.</p>
+                </div>
+                <div class="news-img">
+                </div>
+                <div class="news-txt">
+                    <p><strong>Mise a jour graphique</strong></p>
+                    <p>Expérimentez Resident Evil 4 comme jamais auparavant avec des graphismes remasterisés et une atmsphère plus immersive.</p>
+                </div>
+                <div class="news-img">
+                </div>
+                <div class="news-txt">
+                    <p><strong>Gameplay amélioré</strong></p>
+                    <p>Profitez d'une expérience de jeu améliorée avec des commandes optimisées et de nouvelles mécaniques de jeu.</p>
+                </div>
+            </div>
+            <div class="news-img">
+            </div>
+            <div class="news-txt">
+                <p><strong>Nouveaux monstres</strong></p>
+                <p>Découvrez les nouvelles créatures effrayantes et les améliortions graphiques apportées aux ennemis clasiques de Résident Evil 4.</p>
+            </div>
         </section>
     </main>
 </body>
