--- a/index.html
+++ b/index.html
@@ -39,33 +39,37 @@
         </section>
 
         <section>
-            <h2>ACTUALITES</h2>
-            <div>
-                <div class="news-img">
+            <div class="titre-actualite">
+                <h2>ACTUALITES</h2>
+            </div>
+            <div class="actualites">
+                <div class="actualite">
+                    <div class="news-img"> <img src="assets/img/new-monsters.jpg" alt="monstres">
+                    </div>
+                    <div class="news-txt">
+                        <p><strong>Nouveaux monstres</strong></p>
+                        <p>Découvrez les nouvelles créatures effrayantes et les améliortions graphiques apportées aux ennemis clasiques de Résident Evil 4.</p>
+                    </div>
                 </div>
-                <div class="news-txt">
-                    <p><strong>Nouveaux monstres</strong></p>
-                    <p>Découvrez les nouvelles créatures effrayantes et les améliortions graphiques apportées aux ennemis clasiques de Résident Evil 4.</p>
+                <div class="actualite">
+                    <div class="news-img"> <img src="assets/img/new-graphism.jpg" alt="">
+                    </div>
+                    <div class="news-txt">
+                        <p><strong>Mise a jour graphique</strong></p>
+                        <p>Expérimentez Resident Evil 4 comme jamais auparavant avec des graphismes remasterisés et une atmsphère plus immersive.</p>
+                    </div>
                 </div>
-                <div class="news-img">
-                </div>
-                <div class="news-txt">
-                    <p><strong>Mise a jour graphique</strong></p>
-                    <p>Expérimentez Resident Evil 4 comme jamais auparavant avec des graphismes remasterisés et une atmsphère plus immersive.</p>
-                </div>
-                <div class="news-img">
-                </div>
-                <div class="news-txt">
-                    <p><strong>Gameplay amélioré</strong></p>
-                    <p>Profitez d'une expérience de jeu améliorée avec des commandes optimisées et de nouvelles mécaniques de jeu.</p>
+                <div class="actualite">
+                    <div class="news-img"> 
+                        <img src="assets/img/new-gameplay.jpeg" alt="">
+                    </div>    
+                    <div class="news-txt">
+                        <p><strong>Gameplay amélioré</strong></p>
+                        <p>Profitez d'une expérience de jeu améliorée avec des commandes optimisées et de nouvelles mécaniques de jeu.</p>
+                    </div>
                 </div>
             </div>
-            <div class="news-img">
-            </div>
-            <div class="news-txt">
-                <p><strong>Nouveaux monstres</strong></p>
-                <p>Découvrez les nouvelles créatures effrayantes et les améliortions graphiques apportées aux ennemis clasiques de Résident Evil 4.</p>
-            </div>
+            
         </section>
     </main>
 </body>
