--- a/index.html
+++ b/index.html
@@ -19,20 +19,17 @@
                     <li><a href="">ACHETER</a></li>
                 </ul>
             </nav>
-            <div>
-                <div class="banner">
-                    <div>
-                        <img class="logo" src="assets/img/Resident_Evil_4_Logo_Light_Outlined.png" alt="Logo">
-                    </div>
-                    <h1>REDECOUVREZ UN CLASSIQUE</h1>
-                </div>
-
-            </div>
         </nav>
     </header>
 
     <main>
-        <section>
+
+        <section id="banner">
+            <img src="assets/img/Resident_Evil_4_Logo_Light_Outlined.png" alt="">
+            <h1>REDECOUVREZ UN CLASSIQUE</h1>
+        </section>
+
+        <section id="survive">
             <h2>Survivez. Combattez. Découvrez.</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur ab quae doloremque eum perspiciatis! Perspiciatis id libero praesentium commodi pariatur laudantium, ipsum ab neque quae obcaecati facilis ratione harum necessitatibus.</p>
             <a href="" class="btn savoirplus">En Savoir +</a>
@@ -69,8 +66,33 @@
                     </div>
                 </div>
             </div>
-            
         </section>
     </main>
+
+    <footer>
+            <div id="newsletter-back">
+                <h3>ABONNEZ-VOUS A NOTRE NEWSLETTER</h3>
+                <div class="newsletter">                
+                    <form action="">
+                        <input type="text" placeholder="Votre adresse e-mail">
+                    </form>
+                    <a href="" class="btn savoirplus">S'abonner</a>
+                </div>
+            </div>
+            <div id="foot">
+                <div class="logo-foot">
+                    <img src="assets/img/Resident_Evil_4_Logo_Light_Outlined.png" alt="Logo">
+                </div>
+                <ul class="bot-menu">
+                    <li><a href="">Mentions Légales</a></li>
+                    <li><a href="">Politique de confidentialité</a></li>
+                    <li><a href="">Préférences en matière de cookies</a></li>
+                    <li><a href="">Public Ciblé</a></li>
+                    <li><a href="">Recrutement</a></li>
+                </ul>
+
+            </div>
+    </footer>
+
 </body>
 </html>
