--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 
     <footer>
             <div id="newsletter-back">
-                <h3>ABONNEZ-VOUS A NOTRE NEWSLETTER</h3>
+                <div>
+                    <h3>ABONNEZ-VOUS A NOTRE NEWSLETTER</h3>
+                </div>
                 <div class="newsletter">                
                     <form action="">
                         <input type="text" placeholder="Votre adresse e-mail">
@@ -85,9 +87,13 @@
                 </div>
                 <ul class="bot-menu">
                     <li><a href="">Mentions Légales</a></li>
+                    <p>|</p>
                     <li><a href="">Politique de confidentialité</a></li>
+                    <p>|</p>
                     <li><a href="">Préférences en matière de cookies</a></li>
+                    <p>|</p>
                     <li><a href="">Public Ciblé</a></li>
+                    <p>|</p>
                     <li><a href="">Recrutement</a></li>
                 </ul>
 
