--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <nav>
                 <ul class="main-menu">
                     <li><a href="">ACCUEIL</a></li>
-                    <li><a href="">ACTUALITES</a></li>
-                    <li><a href="">CONTACT</a></li>
-                    <li><a href="">ACHETER</a></li>
+                    <li class="bartop"><a href="">ACTUALITES</a></li>
+                    <li class="bartop"><a href="">CONTACT</a></li>
+                    <li class="bartop"><a href="">ACHETER</a></li>
                 </ul>
             </nav>
         </nav>
@@ -35,7 +35,7 @@
             <a href="" class="btn savoirplus">En Savoir +</a>
         </section>
 
-        <section>
+        <section id="actu">
             <div class="titre-actualite">
                 <h2>ACTUALITES</h2>
             </div>
@@ -87,14 +87,10 @@
                 </div>
                 <ul class="bot-menu">
                     <li><a href="">Mentions Légales</a></li>
-                    <p>|</p>
-                    <li><a href="">Politique de confidentialité</a></li>
-                    <p>|</p>
-                    <li><a href="">Préférences en matière de cookies</a></li>
-                    <p>|</p>
-                    <li><a href="">Public Ciblé</a></li>
-                    <p>|</p>
-                    <li><a href="">Recrutement</a></li>
+                    <li class="bar"><a href="">Politique de confidentialité</a></li>
+                    <li class="bar"><a href="">Préférences en matière de cookies</a></li>
+                    <li class="bar"><a href="">Public Ciblé</a></li>
+                    <li class="bar"><a href="">Recrutement</a></li>
                 </ul>
 
             </div>
