--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
 
     <header>
-        <nav>
             <nav>
                 <ul class="main-menu">
                     <li><a href="">ACCUEIL</a></li>
@@ -19,11 +18,9 @@
                     <li class="bartop"><a href="">ACHETER</a></li>
                 </ul>
             </nav>
-        </nav>
     </header>
 
     <main>
-
         <section id="banner">
             <img src="assets/img/Resident_Evil_4_Logo_Light_Outlined.png" alt="">
             <h1>REDECOUVREZ UN CLASSIQUE</h1>
@@ -36,15 +33,13 @@
         </section>
 
         <section id="actu">
-            <div class="titre-actualite">
-                <h2>ACTUALITES</h2>
-            </div>
+                <h2 class="titre-actualite">ACTUALITES</h2>
             <div class="actualites">
                 <div class="actualite">
                     <div class="news-img"> <img src="assets/img/new-monsters.jpg" alt="monstres">
                     </div>
                     <div class="news-txt">
-                        <p><strong>Nouveaux monstres</strong></p>
+                        <h3>Nouveaux monstres</h3>
                         <p>Découvrez les nouvelles créatures effrayantes et les améliortions graphiques apportées aux ennemis clasiques de Résident Evil 4.</p>
                     </div>
                 </div>
@@ -52,7 +47,7 @@
                     <div class="news-img"> <img src="assets/img/new-graphism.jpg" alt="">
                     </div>
                     <div class="news-txt">
-                        <p><strong>Mise a jour graphique</strong></p>
+                        <h3>Mise a jour graphique</h3>
                         <p>Expérimentez Resident Evil 4 comme jamais auparavant avec des graphismes remasterisés et une atmsphère plus immersive.</p>
                     </div>
                 </div>
@@ -61,7 +56,7 @@
                         <img src="assets/img/new-gameplay.jpeg" alt="">
                     </div>    
                     <div class="news-txt">
-                        <p><strong>Gameplay amélioré</strong></p>
+                        <h3>Gameplay Amélioré</h3>
                         <p>Profitez d'une expérience de jeu améliorée avec des commandes optimisées et de nouvelles mécaniques de jeu.</p>
                     </div>
                 </div>
@@ -70,7 +65,7 @@
     </main>
 
     <footer>
-            <div id="newsletter-back">
+            <section id="newsletter-back">
                 <div>
                     <h3>ABONNEZ-VOUS A NOTRE NEWSLETTER</h3>
                 </div>
@@ -79,9 +74,9 @@
                         <input type="text" placeholder="Votre adresse e-mail">
                     </form>
                     <a href="" class="btn savoirplus">S'abonner</a>
-                </div>
+                </section>
             </div>
-            <div id="foot">
+            <section id="foot">
                 <div class="logo-foot">
                     <img src="assets/img/Resident_Evil_4_Logo_Light_Outlined.png" alt="Logo">
                 </div>
@@ -93,7 +88,7 @@
                     <li class="bar"><a href="">Recrutement</a></li>
                 </ul>
 
-            </div>
+            </section>
     </footer>
 
 </body>
