--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
             <nav>
                 <ul class="main-menu">
-                    <li><a href="">ACCUEIL</a></li>
+                    <li id="accueil"><a href="">ACCUEIL</a></li>
                     <li class="bartop"><a href="">ACTUALITES</a></li>
                     <li class="bartop"><a href="">CONTACT</a></li>
                     <li class="bartop"><a href="">ACHETER</a></li>
@@ -81,7 +81,7 @@
                     <img src="assets/img/Resident_Evil_4_Logo_Light_Outlined.png" alt="Logo">
                 </div>
                 <ul class="bot-menu">
-                    <li><a href="">Mentions Légales</a></li>
+                    <li class="bar"><a href="">Mentions Légales</a></li>
                     <li class="bar"><a href="">Politique de confidentialité</a></li>
                     <li class="bar"><a href="">Préférences en matière de cookies</a></li>
                     <li class="bar"><a href="">Public Ciblé</a></li>
